tests/rosetta/out/Smalltalk/convert-decimal-number-to-rational.out
/tmp/convert-decimal-number-to-rational.st:7: parse error, expected integer literal or floating-point literal or decimal literal
